# start

android.java/: .gitignore  README.md  build.gradle  settings.gradle
android.java/app/: README.md  build.gradle  settings.gradle
android.java/gradle/wrapper/: gradle-wrapper.properties
android.kotlin/: build.gradle  settings.gradle
android.kotlin/app/: build.gradle  local.properties  settings.gradle
android.kotlin/src/main/: AndroidManifest.xml
cpp/: CMakeLists.txt  README.md  build.gradle  settings.gradle
cpp/gradle/wrapper/: gradle-wrapper.properties
cpp/src/main/cpp/: main.cpp
cpp/src/test/cpp/: AddTest.cpp
google.appengine/: .gitignore  README.md  build.gradle  settings.gradle
google.appengine/gradle/wrapper/: gradle-wrapper.properties
groovy/: build.gradle  settings.gradle
groovy/gradle/wrapper/: gradle-wrapper.properties
java/: .gitignore  build.gradle  createGetterSetter.sh  groupTogether.py  settings.gradle
java/app/: build.gradle  settings.gradle
java/tool/: groupTogether.py
jersey/: .gitignore  README.md  build.gradle  settings.gradle
jersey/gradle/wrapper/: gradle-wrapper.properties
kotlin/: settings.gradle  settings.gradle.kts
kotlin/app/: build.gradle  build.gradle.kts
kotlin/list/: build.gradle  build.gradle.kts
kotlin/utilities/: build.gradle  build.gradle.kts
mono/: HelloWorld.cs  build.sh
python/: .gitignore  README.md  setup.py
python/demo/: calculator.py  helloworld.py
python/tests/: calculator_tests.py  helloworld_tests.py  test_setting.py
swift/: .gitignore  Package.swift  README.md
swift/Sources/StartSwift/: main.swift
swift/Sources/libStartSwift/: Todo.swift  hello.swift
swift/Tests/: LinuxMain.swift
swift/Tests/StartSwiftTests/: TodoTests.swift  helloTests.swift
webapp.java/: .gitignore  build.gradle  settings.gradle
webapp.java/gradle/wrapper/: gradle-wrapper.properties
webapp.spring/: README.md  build.gradle  settings.gradle
webapp.springBoot/: README.md  build.gradle
(+68 files in other folders)
