cmake_minimum_required(VERSION 2.8.12)

#set(CMAKE_SYSTEM_NAME Darwin)
set(PROJECT_NAME Hello)
set(LIBRARY_NAME hello)
set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)
set(VERSION_BUILD 0)
set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_BUILD})

set(GTEST_ROOT "$ENV{GOOGLE_TEST_HOME}")
set(GTEST_INCLUDE_DIR ${GTEST_ROOT}/include)
set(GTEST_MAIN_LIBRARY ${GTEST_ROOT}/libgtest_main.a)
set(GTEST_LIBRARY ${GTEST_ROOT}/libgtest.a)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

message("CMAKE_SOURCE_DIR= ${CMAKE_SOURCE_DIR}")
message("CMAKE_BINARY_DIR= ${CMAKE_SOURCE_DIR}")
message("CMAKE_INSTALL_PREFIX= ${CMAKE_INSTALL_PREFIX}")
message("PROJECT_SOURCE_DIR= ${PROJECT_SOURCE_DIR}")
message("PROJECT_BINARY_DIR= ${PROJECT_BINARY_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR= ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_BINARY_DIR= ${CMAKE_CURRENT_BINARY_DIR}")

file(GLOB LIBRARY_HEADER_FOLDER ${PROJECT_SOURCE_DIR}/src/library/headers)
file(GLOB LIBRARY_CLASS_FOLDER ${PROJECT_SOURCE_DIR}/src/library/cpp)
file(GLOB LIBRARY_HEADER_FILES ${LIBRARY_HEADER_FOLDER}/*.h)
file(GLOB LIBRARY_CLASS_FILES ${LIBRARY_CLASS_FOLDER}/*.cpp)
file(GLOB TEST_CLASS_FOLDER ${PROJECT_SOURCE_DIR}/src/test/cpp)
file(GLOB TEST_CLASS_FILES ${TEST_CLASS_FOLDER}/*.cpp)
file(GLOB MAIN_CLASS_FOLDER ${PROJECT_SOURCE_DIR}/src/main/cpp)
file(GLOB MAIN_CLASS_FILES ${MAIN_CLASS_FOLDER}/*.cpp)

file(GLOB REFERENCE_INCLUDE $ENV{HOME}/usr/local/include/**)
file(GLOB REFERENCE_X64_LIBRARY $ENV{HOME}/usr/local/lib/platform/x64/*.a)
file(GLOB REFERENCE_ARM_LIBRARY $ENV{HOME}/usr/local/lib/platform/arm/*.a)

add_subdirectory(${PROJECT_SOURCE_DIR}/src/platforms/x64 ${PROJECT_BINARY_DIR}/platforms/x64)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/platforms/arm ${PROJECT_BINARY_DIR}/platforms/arm)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/platforms/windows ${PROJECT_BINARY_DIR}/platforms/windows)
